--- a/frontend/src/components/Footer/footer.module.css
+++ b/frontend/src/components/Footer/footer.module.css
@@ -3,7 +3,8 @@
   padding: 0;
   border-top: 1px solid gold;
   text-align: center;
-  position: fixed;
+  margin-top: auto;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
