--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -2,6 +2,7 @@
   background: black;
   padding: 0;
   border-bottom: 1px solid gold;
+  /* position: relative; */
 }
 
 .header a {
@@ -40,7 +41,7 @@
 
 .menu {
   position: absolute;
-  z-index: 1;
+  z-index: 1000;
   background-color: black;
   display: none;
 }
