--- a/frontend/src/components/Footer/footer.module.css
+++ b/frontend/src/components/Footer/footer.module.css
@@ -3,8 +3,8 @@
   padding: 0;
   border-top: 1px solid gold;
   text-align: center;
-  margin-top: auto;
-  /* position: fixed; */
+  margin-top: 0%;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
